[metadata]
name = test_helper_gae3
version = 1.0
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Class for autotests GoogleAppEngine python3 app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/test.helper.gae3
project_urls =
    Bug Tracker = https://github.com/vb64/test.helper.gae3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = test_helper_gae3
python_requires = >=3.6
